--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
@@ -31,8 +31,8 @@ Arguments:
 <jsp:root
 	xmlns:ao="http://aoindustries.com/ao-taglib"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:core="https://semanticcms.com/core/taglib/"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
-	xmlns:p="https://semanticcms.com/semanticcms-core-taglib"
 	version="2.1"
 >
 	<jsp:directive.page language="java" buffer="512kb" autoFlush="true" pageEncoding="UTF-8" session="false" />
@@ -83,7 +83,7 @@ Arguments:
 		<c:set var="book" value="" />
 		<!-- Try to find book for request -->
 		<c:catch>
-			<c:set var="book" value="${p:getBook(pagePath)}" />
+			<c:set var="book" value="${core:getBook(pagePath)}" />
 		</c:catch>
 		<!-- Try to find root book -->
 		<c:if test="${empty book and !empty applicationScope.semanticCMS}">
