--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.inc.jspx
@@ -30,12 +30,12 @@ Arguments:
 <jsp:root
 	xmlns:ao="http://aoindustries.com/ao-taglib"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:core="https://semanticcms.com/core/taglib/"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
-	xmlns:p="https://semanticcms.com/semanticcms-core-taglib"
 	version="2.1"
 >
 	<jsp:directive.page language="java" buffer="512kb" autoFlush="true" pageEncoding="UTF-8" session="false" />
-	<c:set var="contentRoot" value="${p:captureContentRoot('meta')}" />
+	<c:set var="contentRoot" value="${core:captureContentRoot('meta')}" />
 	<c:set var="pageRef" value="${contentRoot.pageRef}" />
 	<c:set var="book" value="${pageRef.book}" />
 	<c:set var="servletPath" value="${pageRef.servletPath}" />
@@ -67,7 +67,7 @@ Arguments:
 				<div id="navigationLogo">
 					<ao:a target="contentFrame" href="${servletPath}" param.view="what-to-do"><ao:img src="${book.pathPrefix}${book.param.logoSrc}" width="${book.param.logoWidth}" height="${book.param.logoHeight}" alt="${book.param.logoAlt}" /></ao:a>
 				</div>
-				<c:if test="${!p:isExporting()}">
+				<c:if test="${!core:isExporting()}">
 					<div id="navigationSearch">
 						<ao:form target="contentFrame" action="search.jsp" style="display:inline">
 							<div>
@@ -82,7 +82,7 @@ Arguments:
 				<c:forEach var="viewGroup" items="${applicationScope.semanticCMS.viewGroups}">
 					<c:set var="hasApplicableView" value="false" />
 					<c:forEach var="view" items="${views}">
-						<c:if test="${!hasApplicableView and view.group==viewGroup and view.appliesGlobally and p:isViewApplicable(view, contentRoot)}">
+						<c:if test="${!hasApplicableView and view.group==viewGroup and view.appliesGlobally and core:isViewApplicable(view, contentRoot)}">
 							<c:set var="hasApplicableView" value="true" />
 						</c:if>
 					</c:forEach>
@@ -90,7 +90,7 @@ Arguments:
 						<div class="semanticcms-theme-documentation-navigation-views">
 							<ul>
 								<c:forEach var="view" items="${views}">
-									<c:if test="${view.group==viewGroup and view.appliesGlobally and p:isViewApplicable(view, contentRoot)}">
+									<c:if test="${view.group==viewGroup and view.appliesGlobally and core:isViewApplicable(view, contentRoot)}">
 										<!-- Note: entire frame is nofollow -->
 										<li><ao:a
 											target="contentFrame"
@@ -106,7 +106,7 @@ Arguments:
 
 				<!-- Capture all pages recursively without headers (for fast traversal) -->
 				<nav id="navigationTree" class="ygtv-highlight">
-					<p:navigationTree yuiConfig="true" target="contentFrame" root="${contentRoot}" />
+					<core:navigationTree yuiConfig="true" target="contentFrame" root="${contentRoot}" />
 				</nav>
 			</main>
 			<ao:script>
@@ -117,7 +117,7 @@ Arguments:
 				semanticcms_theme_documentation_navigation.tree.render();
 
 				$(function() {
-					semanticcms_theme_documentation_navigation.highlightPage(<ao:out value="${p:encodeHexData(arg.page.pageRef)}" />);
+					semanticcms_theme_documentation_navigation.highlightPage(<ao:out value="${core:encodeHexData(arg.page.pageRef)}" />);
 				});
 			</ao:script>
 		</body>
