--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
@@ -31,8 +31,8 @@ Arguments:
 <jsp:root
 	xmlns:ao="http://aoindustries.com/ao-taglib"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:core="https://semanticcms.com/core/taglib/"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
-	xmlns:p="https://semanticcms.com/semanticcms-core-taglib"
 	version="2.1"
 >
 	<jsp:directive.page language="java" buffer="512kb" autoFlush="true" pageEncoding="UTF-8" session="false" />
@@ -60,9 +60,9 @@ Arguments:
 			<ao:meta name="apple-mobile-web-app-capable" content="yes" />
 			<ao:meta name="apple-mobile-web-app-status-bar-style" content="black" />
 			<!-- Authors -->
-			<ao:include page="/semanticcms-core-theme-base/copyright.inc.jspx" arg.copyright="${p:getViewCopyright(view, page)}" />
-			<ao:include page="/semanticcms-core-theme-base/authors.inc.jspx" arg.authors="${p:getViewAuthors(view, page)}" />
-			<title><ao:out value="${p:getViewTitle(view, page)}" /></title>
+			<ao:include page="/semanticcms-core-theme-base/copyright.inc.jspx" arg.copyright="${core:getViewCopyright(view, page)}" />
+			<ao:include page="/semanticcms-core-theme-base/authors.inc.jspx" arg.authors="${core:getViewAuthors(view, page)}" />
+			<title><ao:out value="${core:getViewTitle(view, page)}" /></title>
 			<c:set var="description" value="${view.getDescription(page)}" />
 			<c:if test="${!empty description}">
 				<ao:meta name="description" content="${description}" />
@@ -86,11 +86,11 @@ Arguments:
 				<ao:link href="${cssLink}" rel="stylesheet" type="text/css" />
 			</c:forEach>
 			<!-- Per-view links -->
-			<c:forEach var="link" items="${p:getViewLinks(view, page)}">
+			<c:forEach var="link" items="${core:getViewLinks(view, page)}">
 				<ao:link link="${link}" />
 			</c:forEach>
 			<!-- Application-wide scripts merged with view-specific scripts -->
-			<c:forEach var="script" items="${p:mergeGlobalAndViewScripts(view)}">
+			<c:forEach var="script" items="${core:mergeGlobalAndViewScripts(view)}">
 				<ao:script src="${script.value}" />
 			</c:forEach>
 			<!-- Application-wide head includes -->
@@ -98,7 +98,7 @@ Arguments:
 				<ao:include page="${headInclude}" />
 			</c:forEach>
 			<ao:include page="update-nav.inc.jspx" arg.page="${page}" />
-			<c:if test="${!p:getViewAllowRobots(view, page)}">
+			<c:if test="${!core:getViewAllowRobots(view, page)}">
 				<ao:meta name="robots" content="noindex, nofollow" />
 			</c:if>
 		</head>
@@ -108,13 +108,13 @@ Arguments:
 					page="page-top-area.inc.jspx"
 					arg.book="${pageRef.book}"
 					arg.path="${pageRef.path}"
-					arg.view="${view.isDefault() ? pageRef.path : pageRef.path.concat('?view=').concat(p:encodeUrlParam(view.name))}"
+					arg.view="${view.isDefault() ? pageRef.path : pageRef.path.concat('?view=').concat(core:encodeUrlParam(view.name))}"
 					arg.page="${page}"
 					arg.active="${view.name}"
 				/>
 				<main id="pageMainArea">
 					<ao:include page="/semanticcms-pagegraph/pagegraph.inc.jsp" arg.page="${page}" arg.view="${view}" />
-					<p:doView view="${view}" page="${page}" />
+					<core:doView view="${view}" page="${page}" />
 					<div id="pagePadBottom"><!-- Avoid self-closing tag in jspx --></div>
 				</main>
 			</div>
