--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/update-nav.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/update-nav.inc.jspx
@@ -30,22 +30,22 @@ Arguments:
 <jsp:root
 	xmlns:ao="http://aoindustries.com/ao-taglib"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:core="https://semanticcms.com/semanticcms/core/taglib/"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
-	xmlns:p="https://semanticcms.com/semanticcms-core-taglib"
 	version="2.1"
 >
 	<jsp:directive.page language="java" buffer="512kb" autoFlush="true" pageEncoding="UTF-8" session="false" />
-	<c:if test="${!p:isExporting() || requestScope['template.skipFocus'] != true}">
+	<c:if test="${!core:isExporting() || requestScope['template.skipFocus'] != true}">
 		<ao:script>
 			$(function() {
 				<!-- Scripting not allowed between pages when static files loaded from filesystem -->
-				<c:if test="${!p:isExporting()}">
+				<c:if test="${!core:isExporting()}">
 					if(window.parent !== window) {
 						var frames = window.parent.frames;
 						if(frames.length==2 &amp;&amp; frames[1]==window) {
 							var navigation = frames[0].semanticcms_theme_documentation_navigation;
 							if(navigation !== undefined) {
-								navigation.highlightPage(<ao:out value="${p:encodeHexData(arg.page.pageRef)}" />);
+								navigation.highlightPage(<ao:out value="${core:encodeHexData(arg.page.pageRef)}" />);
 							}
 						}
 					}
