Core taglib now supports deferred expressions.

--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.inc.jspx
@@ -106,7 +106,7 @@ Arguments:
 
 				<!-- Capture all pages recursively without headers (for fast traversal) -->
 				<nav id="navigationTree" class="ygtv-highlight">
-					<core:navigationTree yuiConfig="true" target="contentFrame" root="${contentRoot}" />
+					<core:navigationTree yuiConfig="true" target="contentFrame" root="#{contentRoot}" />
 				</nav>
 			</main>
 			<ao:script>
