--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/page-top-area.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/page-top-area.inc.jspx
@@ -73,7 +73,7 @@ Arguments:
 				<c:if test="${!core:isExporting()}">
 					<c:set var="pageSrc" value="${page.src}" />
 					<c:if test="${!empty pageSrc}">
-						<file:file book="${pageSrc.bookName}" path="${pageSrc.path}">Edit</file:file>
+						<file:file book="#{pageSrc.bookName}" path="#{pageSrc.path}">Edit</file:file>
 					</c:if>
 				</c:if>
 
