--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
@@ -98,17 +98,17 @@ Arguments:
 			<ao:meta name="viewport" content="width=device-width, initial-scale=1.0" />
 			<ao:meta name="apple-mobile-web-app-capable" content="yes" />
 			<ao:meta name="apple-mobile-web-app-status-bar-style" content="black" />
-			<c:choose>
-				<c:when test="${empty book}">
+			<ao:choose>
+				<ao:when test="#{empty book}">
 					<title><ao:out value="${arg.message}" /></title>
-				</c:when>
-				<c:otherwise>
+				</ao:when>
+				<ao:otherwise>
 					<!-- Authors -->
 					<ao:include page="/semanticcms-core-theme-base/copyright.inc.jspx" arg.copyright="${book.copyright}" />
 					<ao:include page="/semanticcms-core-theme-base/authors.inc.jspx" arg.authors="${book.authors}" />
 					<title><ao:out value="${arg.message}" /> - <ao:out value="${book.title}" /></title>
-				</c:otherwise>
-			</c:choose>
+				</ao:otherwise>
+			</ao:choose>
 			<jsp:text>&lt;!--[if lt IE 9]&gt;</jsp:text>
 				<ao:script src="/webjars/html5shiv/3.7.3/html5shiv.min.js" />
 			<jsp:text>&lt;![endif]--&gt;</jsp:text>
