--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/frameset.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/frameset.inc.jspx
@@ -35,7 +35,7 @@ Arguments:
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	version="2.1"
 >
-	<jsp:directive.page language="java" buffer="512kb" autoFlush="true" pageEncoding="UTF-8" session="false" />
+	<jsp:directive.page language="java" pageEncoding="UTF-8" session="false" />
 	<c:set var="pageRef" value="${arg.page.pageRef}" />
 	<c:set var="book" value="${applicationScope.semanticCMS.rootBook}" />
 	<ao:html doctype="frameset"><!-- html5 does not support framesets -->
