--- a/src/main/book-filtered/index.jspx
+++ b/src/main/book-filtered/index.jspx
@@ -33,7 +33,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		shortTitle="@{shortTitle}"
 		description="@{project.description}"
 		datePublished="2016-10-19T02:33:00-0500"
+		dateModified="2016-10-28T00:11:09-0500"
 	>
+		<core:child page="changelog.jspx" />
 		<core:child page="apidocs/index.jspx" />
 		<core:child book="/theme-documentation/style" page="/index.jspx" />
 		<p>
@@ -42,6 +44,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<section:section label="Project Links">
 			<ul>
 				<li><core:link page="index.jspx">Project Home</core:link></li>
+				<li><core:link page="changelog.jspx">Changelog</core:link></li>
 				<li><core:link page="apidocs/index.jspx">API Docs</core:link></li>
 				<li><ao:a href="https://search.maven.org/#search%7Cgav%7C1%7Cg:%22@{project.groupId}%22%20AND%20a:%22@{project.artifactId}%22">Maven Central Repository</ao:a></li>
 				<li><ao:a href="@{project.scm.url}">GitHub</ao:a></li>
