--- a/src/main/book-filtered/changelog.jspx
+++ b/src/main/book-filtered/changelog.jspx
@@ -58,7 +58,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.6.0"
-			dateCreated="2016-10-20T19:36:00-0500"
+			datePublished="2016-10-20T19:36:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -77,7 +77,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.5.1"
-			dateCreated="2016-10-11T20:52:00-0500"
+			datePublished="2016-10-11T20:52:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -91,7 +91,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.5.0"
-			dateCreated="2016-10-04T23:12:00-0500"
+			datePublished="2016-10-04T23:12:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -107,7 +107,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.4"
-			dateCreated="2016-09-11T17:26:00-0500"
+			datePublished="2016-09-11T17:26:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -124,7 +124,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.3"
-			dateCreated="2016-09-03T11:11:00-0500"
+			datePublished="2016-09-03T11:11:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -137,7 +137,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.2"
-			dateCreated="2016-08-28T20:57:00-0500"
+			datePublished="2016-08-28T20:57:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -159,7 +159,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.1"
-			dateCreated="2016-08-21T18:33:00-0500"
+			datePublished="2016-08-21T18:33:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -173,7 +173,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.0"
-			dateCreated="2016-08-19T16:47:00-0500"
+			datePublished="2016-08-19T16:47:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
