--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
@@ -29,7 +29,7 @@ Arguments:
 	arg.message  The human readable error message
 -->
 <jsp:root
-	xmlns:ao="http://aoindustries.com/ao-taglib"
+	xmlns:ao="https://aoindustries.com/ao-taglib/"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:core="https://semanticcms.com/core/taglib/"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
