--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
@@ -54,7 +54,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 				scmUrl="@{documented.scm.url}"
 			>
 				<ul>
-					<li>Updated for <core:link book="/" page="/index.jspx" /> 2 compatibility.</li>
+					<li>Updated for <core:link book="/" page="/" /> 2 compatibility.</li>
 				</ul>
 			</changlog:release>
 		</c:if>
@@ -84,7 +84,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			<ul>
 				<li>Added googleoff / googleon around the frames links.</li>
 				<li>New <ao:a href="https://aoindustries.com/ao-oss-parent/">AO OSS Parent</ao:a> POM to simplify <code>pom.xml</code> files.</li>
-				<li>Project documentation moved to per-project book in <core:link book="/" page="/index.jspx" /> format.</li>
+				<li>Project documentation moved to per-project book in <core:link book="/" page="/" /> format.</li>
 				<li>Added changelog as top-level project link.</li>
 			</ul>
 		</changelog:release>
