--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/index.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/index.jspx
@@ -36,9 +36,9 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		datePublished="2016-10-19T02:33:00-0500"
 		dateModified="2017-07-18T20:35:30-0500"
 	>
-		<core:child page="changelog.jspx" />
-		<core:child page="apidocs/index.jspx" />
-		<core:child book="/theme-documentation/style" page="/index.jspx" />
+		<core:child page="changelog" />
+		<core:child page="apidocs/" />
+		<core:child book="/theme-documentation/style" page="/" />
 		<ao:include
 			page="/ao-badges/badges.inc.jspx"
 			arg.projectStatus="${currentPage.property.projectStatus}"
@@ -50,20 +50,20 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 			arg.license="${currentPage.property.license}"
 		/>
 		<p>
-			<core:link page="index.jspx">SemanticCMS theme tailored for technical documentation</core:link>.
+			<core:link page="/">SemanticCMS theme tailored for technical documentation</core:link>.
 		</p>
 		<section:section label="Project Links">
 			<ul>
-				<li><core:link page="index.jspx">Project Home</core:link></li>
-				<li><core:link page="changelog.jspx">Changelog</core:link></li>
-				<li><core:link page="apidocs/index.jspx">API Docs</core:link></li>
+				<li><core:link page="/">Project Home</core:link></li>
+				<li><core:link page="changelog">Changelog</core:link></li>
+				<li><core:link page="apidocs/">API Docs</core:link></li>
 				<li><ao:a href="https://search.maven.org/#search%7Cgav%7C1%7Cg:%22@{documented.groupId}%22%20AND%20a:%22@{documented.artifactId}%22">Maven Central Repository</ao:a></li>
 				<li><ao:a href="@{documented.scm.url}">GitHub</ao:a></li>
 			</ul>
 		</section:section>
 		<section:section label="Modules">
 			<ul>
-				<li><core:link book="/theme-documentation/style" page="/index.jspx" /></li>
+				<li><core:link book="/theme-documentation/style" page="/" /></li>
 			</ul>
 		</section:section>
 	</core:page>
