--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2015, 2016, 2017  AO Industries, Inc.
+Copyright (C) 2015, 2016, 2017, 2018  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -123,7 +123,7 @@ Arguments:
 			<ao:link href="/styles/page-print.css" media="print" rel="stylesheet" type="text/css" />
 			<ao:script src="/webjars/jquery/2.2.4/jquery.min.js" />
 			<!-- Application-wide head includes -->
-			<c:forEach var="headInclude" items="${applicationScope.semanticCMS.headIncludes}">
+			<c:forEach var="headInclude" items="${applicationScope.htmlRenderer.headIncludes}">
 				<ao:include page="${headInclude}" />
 			</c:forEach>
 			<core:doComponents view="${null}" page="${null}" position="HEAD_END" reverse="true" />
