--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error-pages/500.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error-pages/500.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2015, 2016  AO Industries, Inc.
+Copyright (C) 2015, 2016, 2018  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -29,5 +29,5 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 	<jsp:directive.page language="java" pageEncoding="UTF-8" session="false" />
 	<jsp:directive.page isErrorPage="true" />
 
-	<ao:forward page="/semanticcms-theme-documentation/error.inc.jspx" arg.code="500" arg.message="500 Internal Server Error" />
+	<ao:forward page="/semanticcms-theme-documentation/error.jspx" arg.code="500" arg.message="500 Internal Server Error" />
 </jsp:root>
