--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2015, 2016, 2017  AO Industries, Inc.
+Copyright (C) 2013, 2014, 2015, 2016, 2017, 2018  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
