--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/index.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/index.jspx
@@ -34,7 +34,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		shortTitle="@{documented.shortTitle}"
 		description="@{documented.description}"
 		datePublished="2016-10-19T02:33:00-0500"
-		dateModified="2019-06-01T00:46:53-0500"
+		dateModified="2019-06-01T18:51:51-0500"
 	>
 		<core:child page="changelog" />
 		<core:child page="apidocs/" />
@@ -54,7 +54,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<p>
 			<core:link page="/">SemanticCMS theme tailored for technical documentation</core:link>.
 		</p>
-		<section:section label="Project Links">
+		<section:nav label="Project Links">
 			<ul>
 				<li><core:link page="/">Project Home</core:link></li>
 				<li><core:link page="changelog">Changelog</core:link></li>
@@ -62,7 +62,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 				<li><ao:a href="https://search.maven.org/#search%7Cgav%7C1%7Cg:%22@{documented.groupId}%22%20AND%20a:%22@{documented.artifactId}%22">Maven Central Repository</ao:a></li>
 				<li><ao:a href="@{documented.scm.url}">GitHub</ao:a></li>
 			</ul>
-		</section:section>
+		</section:nav>
 		<section:section label="Modules">
 			<ul>
 				<li><core:link book="/theme-documentation/style" page="/" /></li>
