--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
@@ -53,6 +53,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 				artifactId="@{documented.artifactId}"
 				scmUrl="@{documented.scm.url}"
 			/>
+			<!-- TODO: <li>Minimum Java version changed from 1.6 to 1.7.</li>-->
 		</c:if>
 
 		<changelog:release
