--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
@@ -54,7 +54,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 				scmUrl="@{documented.scm.url}"
 			>
 				<ul>
-					<!-- TODO: <li>Minimum Java version changed from 1.6 to 1.7.</li>-->
+					<li>Minimum Java version changed from 1.6 to 1.7.</li>
 					<li>Using managed dependencies:
 						<ol>
 							<li>This project uses transitive managed dependencies.</li>
