--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2015, 2016, 2018  AO Industries, Inc.
+Copyright (C) 2013, 2014, 2015, 2016, 2018, 2019  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -78,10 +78,10 @@ Arguments:
 			<jsp:text>&lt;![endif]--&gt;</jsp:text>
 			<ao:link href="/semanticcms-core-theme-base/styles/html5.css" rel="stylesheet" type="text/css" />
 			<ao:link href="styles/page.css" rel="stylesheet" type="text/css" />
-			<!-- TODO: Remove this once all out of docs-taglib -->
+			<!-- TODO: This causes a 404 error where docs-taglib not deployed.  Register as a headInclude from docs-taglib -->
 			<ao:link href="/styles/page.css" rel="stylesheet" type="text/css" />
 			<ao:link href="styles/page-print.css" media="print" rel="stylesheet" type="text/css" />
-			<!-- TODO: Remove this once all out of docs-taglib -->
+			<!-- TODO: This causes a 404 error where docs-taglib not deployed.  Register as a headInclude from docs-taglib -->
 			<ao:link href="/styles/page-print.css" media="print" rel="stylesheet" type="text/css" />
 			<!-- Application-wide CSS -->
 			<c:forEach var="cssLink" items="${applicationScope.htmlRenderer.cssLinks}">
