--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2015, 2016, 2017, 2018  AO Industries, Inc.
+Copyright (C) 2013, 2014, 2015, 2016, 2017, 2018, 2019  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -59,7 +59,8 @@ Arguments:
 			<ao:include page="jslib/yui-2.9.0/head.inc.jspx" />
 			<ao:link href="styles/navigation.css" rel="stylesheet" type="text/css" />
 			<ao:script src="navigation.js" />
-			<ao:script src="/webjars/jquery/2.2.4/jquery.min.js" />
+			<!-- TODO: Get version from MavenProperties, other places, too (even inside jsps) -->
+			<ao:script src="/webjars/jquery/3.4.1/jquery.min.js" />
 			<!-- No search index left navigation frame -->
 			<ao:meta name="robots" content="noindex, nofollow" />
 		</head>
