Changed "$" to "jQuery" for jQuery 3 compatibility.

--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/navigation.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/navigation.jspx
@@ -120,7 +120,7 @@ Arguments:
 				semanticcms_theme_documentation_navigation.tree.render();
 				// TODO: The tree is double-encoding things
 				//       See https://aoindustries.com/ao-taglib/ao.tld/tags?navigation=true
-				$(function() {
+				jQuery(function() {
 					semanticcms_theme_documentation_navigation.highlightPage(<ao:out value="${core:encodeHexData(arg.page.pageRef)}" />);
 				});
 			</ao:script>
