--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/update-nav.inc.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/update-nav.inc.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2015, 2016  AO Industries, Inc.
+Copyright (C) 2013, 2014, 2015, 2016, 2019  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -38,7 +38,7 @@ Arguments:
 	<jsp:directive.page language="java" pageEncoding="UTF-8" session="false" />
 	<c:if test="${!core:isExporting() || requestScope['template.skipFocus'] != true}">
 		<ao:script>
-			$(function() {
+			jQuery(function() {
 				<!-- Scripting not allowed between pages when static files loaded from filesystem -->
 				<c:if test="${!core:isExporting()}">
 					if(window.parent !== window) {
